[workspace]
resolver = "2"
members = ["host", "methods"]

# Always optimize; building and running the guest takes much longer without optimization.
[profile.dev]
opt-level = 3

[profile.release]
debug = 1
lto = true

[patch.crates-io]
### This if for v0.2.0-beta.9
#revm = { git = "https://github.com/bluealloy/revm", rev = "a28a543" }
#revm-interpreter = { git = "https://github.com/bluealloy/revm", rev = "a28a543" }
#revm-precompile = { git = "https://github.com/bluealloy/revm", rev = "a28a543" }
#revm-primitives = { git = "https://github.com/bluealloy/revm", rev = "a28a543" }