[package]
name = "host"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
methods = { path = "../methods" }
risc0-zkvm = { version = "1.0.1" }
tracing = { version = "0.1.40" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = "1.0"

## Sovereign Labs fork that is provable
## Uncomment whole section to make it compile
#reth-primitives = { git = "https://github.com/Sovereign-Labs/reth", rev = "fb971d14f4ed08699f1b627fb6ea2e8522399f4d", default-features = false }
## For proper compilation of the ^
#alloy-trie = { version = "=0.3.0" }
#alloy-primitives = { version = "=0.6.4" }
#revm = { version = "=7.1.0", features = ["serde"], default-features = false }
#revm-primitives = { version = "=3.1.0", default-features = false }
## End of Sovereign Labs fork

## Upstream commit with last PR for proving was merged.
# Uncomment whole section to make it compile
reth-primitives = { git = "https://github.com/paradigmxyz/reth", rev = "43c72b022cea3068edbce794fa94adefb029fd06", default-features = false }
# For proper compilation of the ^
alloy-trie = { version = "=0.3.0" }
alloy-primitives = { version = "=0.6.4" }
revm-primitives = { version = "=3.1.0", default-features = false }
# End of upsteam

# One of the latest
#reth-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v0.2.0-beta.9", default-features = false }