[package]
name = "reth_primitives_guest"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
risc0-zkvm = { version = "1.0.1", default-features = false, features = ['std'] }

# Fork that is provable
reth-primitives = { git = "https://github.com/Sovereign-Labs/reth", rev = "fb971d14f4ed08699f1b627fb6ea2e8522399f4d", default-features = false }

#reth-primitives = { git = "https://github.com/paradigmxyz/reth", rev = "43c72b022cea3068edbce794fa94adefb029fd06", default-features = false }
#reth-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v0.2.0-beta.9", default-features = false }
#reth-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v0.2.0-beta.9" }

# For proper compilation
alloy-trie = { version = "=0.3.0" }
alloy-primitives = { version = "=0.6.4" }
revm = { version = "=7.1.0", features = ["serde"], default-features = false }
revm-primitives = { version = "=3.1.0", default-features = false }


[patch.crates-io]
secp256k1_v027 = { package = "secp256k1", version = "0.27", git = "https://github.com/Sovereign-Labs/rust-secp256k1.git", rev = "5f425f1223cfc7cd0cee61335268629659dc6007" }
secp256k1_v028 = { package = "secp256k1", version = "0.28", git = "https://github.com/Sovereign-Labs/rust-secp256k1.git", rev = "c921ac680bc998c738d83adac4c916eb4b191094" }
