[package]
name = "reth_primitives_guest"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
risc0-zkvm = { version = "1.0.1", default-features = false, features = ['std'] }

## Sovereign Labs fork that is provable
## Uncomment whole section to make it compile
#reth-primitives = { git = "https://github.com/Sovereign-Labs/reth", rev = "fb971d14f4ed08699f1b627fb6ea2e8522399f4d", default-features = false }
# For proper compilation of the ^
#alloy-trie = { version = "=0.3.0" }
#alloy-primitives = { version = "=0.6.4" }
#revm = { version = "=7.1.0", features = ["serde"], default-features = false }
#revm-primitives = { version = "=3.1.0", default-features = false }
# END OF FORK

## Sovereign Labs fork that is provable
reth-primitives = { git = "https://github.com/paradigmxyz/reth", rev = "43c72b022cea3068edbce794fa94adefb029fd06", default-features = false }
# For proper compilation of the ^
alloy-trie = { version = "=0.3.0" }
alloy-primitives = { version = "=0.6.4" }
revm-primitives = { version = "=3.1.0", default-features = false }
# END OF LAST PR FOR PROVING

# Version speaks for itself
#reth-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v0.2.0-beta.9", default-features = false }


[patch.crates-io]
# Patches for correct building of secp256k1 on risc0 architecture
# This is only for older versions
secp256k1_v027 = { package = "secp256k1", version = "0.27", git = "https://github.com/Sovereign-Labs/rust-secp256k1.git", rev = "5f425f1223cfc7cd0cee61335268629659dc6007" }
# This is needed always
secp256k1_v028 = { package = "secp256k1", version = "0.28", git = "https://github.com/Sovereign-Labs/rust-secp256k1.git", rev = "c921ac680bc998c738d83adac4c916eb4b191094" }

### This if for v0.2.0-beta.9
#revm = { git = "https://github.com/bluealloy/revm", rev = "a28a543" }
#revm-interpreter = { git = "https://github.com/bluealloy/revm", rev = "a28a543" }
#revm-precompile = { git = "https://github.com/bluealloy/revm", rev = "a28a543" }
#revm-primitives = { git = "https://github.com/bluealloy/revm", rev = "a28a543" }
